# h5v

./: .gitignore  Cargo.toml  README.md  artifacts.json  build.rs  changelog.rss  dist-workspace.toml  index.html  install.ps1  install.sh  make_test_h5.py  make_test_var_arr.py  oranda.json
.github/workflows/: new_ver.yml  release-extras.yml  release.yml  web.yml
Formula/: h5v.rb
artifacts/: index.html
book/: 404.html  command-reference.html  commands.html  compound-datasets.html  configuration-reference.html  configuration.html  controls.html  hdf5-support.html  heatmap.html  image-conventions.html  images.html  installation.html  intro.html  matrix.html  multichart-expressions.html  multichart.html  navigation.html  plugins.html  previews.html  print.html  quick-start.html  searchindex.js  searchindex.json  startup-scripting.html  troubleshooting.html
bucket/: h5v.json
changelog/: index.html
changelog/v0.10.0/: index.html
changelog/v0.11.0/: index.html
changelog/v0.12.0/: index.html
changelog/v0.2.5/: index.html
changelog/v0.2.6/: index.html
changelog/v0.3.0/: index.html
changelog/v0.4.0/: index.html
changelog/v0.4.1/: index.html
changelog/v0.4.2/: index.html
changelog/v0.4.3/: index.html
changelog/v0.4.4/: index.html
changelog/v0.5.0/: index.html
changelog/v0.5.1/: index.html
changelog/v0.5.2/: index.html
changelog/v0.5.3/: index.html
changelog/v0.6.0/: index.html
changelog/v0.7.0/: index.html
changelog/v0.7.1/: index.html
changelog/v0.8.0/: index.html
changelog/v0.8.2/: index.html
changelog/v0.9.0/: index.html
docs/: book.toml
docs/book/markdown/: intro.md
docs/src/: SUMMARY.md  command-reference.md  commands.md  compound-datasets.md  configuration-reference.md  configuration.md  controls.md  hdf5-support.md  heatmap.md  image-conventions.md  images.md  installation.md  intro.md  matrix.md  multichart-expressions.md  multichart.md  navigation.md  plugins.md  previews.md  quick-start.md  startup-scripting.md  troubleshooting.md
examples/: h5v-example.h5  h5v-example.h5v
macros/: Cargo.toml
macros/src/: lib.rs
scripts/: append_wide_image_test.py  generate_dist_manifest.py  generate_example_h5.py  generate_package_manager_assets.py  make_big_dataeset_file.py  make_code_datasets.py  make_enum.py  make_fixed_string_attribute.py  make_nested_compound.py  make_radargram.py  make_test_h5.py  make_test_var_arr.py  make_test_wide_image.py  make_to_many_ds.py
src/: cli.rs  color_consts.rs  compat.rs  data.rs  error.rs  h5f.rs  health.rs  importing.rs  linking.rs  logging.rs  main.rs  search.rs  sprint_attributes.rs  sprint_typedesc.rs  test_support.rs  ui.rs  ui_info.rs  ui_tree_view.rs  utils.rs
src/color_consts/: accessors.rs  catalog.rs  mod.rs  palette.rs  state.rs  tests.rs  types.rs
src/configure/: colors.rs  errors.rs  loading.rs  lua.rs  mod.rs  symbols.rs
src/configure/loading/: pathing.rs  support_files.rs
src/configure/lua/: bootstrap.rs  commands.rs  context.rs  events.rs  heatmap.rs  keymaps.rs  layout.rs  loader.rs  mchart.rs  plugins.rs  registration.rs  themes.rs  ui.rs
src/configure/presentation/: catalog.rs  mod.rs  palette.rs  parsing.rs  state.rs  tests.rs  types.rs
src/configure/registry/: builder.rs  ids.rs  metadata.rs  mod.rs  runtime.rs  seed.rs  tests.rs
src/h5f/: attrs.rs  codec.rs  compound.rs  meta.rs  model.rs  tree.rs
src/h5f/codec/: dataset.rs  enum_codec.rs  fixed_string.rs  mod.rs  opaque.rs
src/importing/: cache.rs  readers.rs  writer.rs
src/scripting/: README.md  chartup.rs  mod.rs  types.rs
src/ui/: app.rs  attributes.rs  chart_math.rs  chrome.rs  command.rs  command_view.rs  cursor.rs  custom_content.rs  dims.rs  edit.rs  help.rs  image_preview.rs  input.rs  logs.rs  main_display.rs  matrix.rs  mchart.rs  mod.rs  page_scroll.rs  perf.rs  preview.rs  preview_chart.rs  segment_scroll.rs  state.rs  std_comp_render.rs  toast.rs  tree_view.rs
src/ui/app/: boot.rs  config.rs  dialogs.rs  events.rs  lifecycle.rs  reload.rs  render.rs  runtime.rs  startup_progress.rs  update.rs
src/ui/command/: catalog.rs  handlers.rs  mod.rs  parsing.rs  tests.rs  view.rs
src/ui/custom_content/: json.rs  lua.rs  render.rs  types.rs
src/ui/heatmap/: load.rs  mod.rs  panels.rs  render.rs  tests.rs
src/ui/help/: mod.rs  panels.rs  view.rs
src/ui/input/: attributes.rs  command.rs  content.rs  dialogs.rs  keymap.rs  mchart.rs  mod.rs  mouse.rs  search.rs  tree.rs
src/ui/mchart/: background.rs  derived.rs  derived_tests.rs  eval.rs  expression.rs  functions.rs  interaction.rs  load.rs  mod.rs  model.rs  prompt.rs  prompt_tests.rs  render.rs  tests.rs  types.rs  viewport_tests.rs
src/ui/preview/: chart.rs  image.rs  mod.rs  pipeline.rs
src/ui/render/: attributes.rs  mod.rs  typedesc.rs
src/ui/state/: content_modes.rs  core.rs  heatmap.rs  help_state.rs  movement.rs  navigation.rs  preview.rs  selection.rs  ui_layout.rs
wix/: main.wxs
(+25 files in other folders)
