[workspace]
members = [
    "macros",
    ".",      # main h5v crate
]
resolver = "2"

[package]
name = "h5v"
version = "0.1.0"
edition = "2021"
authors = ["Daniel <animcuil@gmail.com>"]
description = "A terminal HDF5 viewer with matrix/chart/image previews, compound schemas, and scripting"
readme = "README.md"
repository = "https://github.com/DanielHauge/h5v"
license = "Apache-2.0"
include = ["/src/**/*", "/Cargo.toml", "/Cargo.lock", "/README.md", "/LICENSE"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }-v{ version }{ archive-suffix }"
bin-dir = "{ name }-{ target }-v{ version }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.'cfg(windows)']
pkg-fmt = "zip"

[package.metadata.wix]
upgrade-guid = "28EED06D-832F-4103-9790-5C224AF6204D"
path-guid = "FDD2D27B-BEA3-41FA-A316-683AF91FDF97"
license = false
eula = false

[dependencies]
arboard = "3.6.1"
bktree = "1.0.1"
macros = { package = "h5v-macros", version = "0.1.0", path = "./macros" }
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
git-version = "0.3.9"
hdf5-metno = { version = "0.12.4", features = [
    "blosc-all",
    "lzf",
    "static",
    "zlib",
] }
hdf5-metno-sys = "0.11.3"
image = { version = "0.25.10" } # PNG + JPEG libs
itertools = "0.14.0"
libc = "0.2.185"
mlua = { version = "0.11.6", features = ["async", "lua55", "vendored"] }
ndarray = "0.17.2"
plotters = "0.3.7"
ratatui = { version = "0.30.0", features = ["all-widgets"] }
ratatui-image = { version = "10.0.6", default-features = false, features = [
    "image-defaults",
    "crossterm",
] }
serde_json = "1.0.149"
shell-words = "1.1.0"
syntect = { version = "5.3.0", default-features = false, features = [
    "default-fancy",
] }
tempfile = "3.20.0"
time = { version = "0.3.44", features = ["formatting", "local-offset"] }
update-informer = "1.3.0"

[target.'cfg(target_os = "linux")'.dependencies]
arboard = { version = "3.6.1", features = [
    "wl-clipboard-rs",
    "wayland-data-control",
] }

[target.'cfg(target_os = "macos")'.dependencies]
arboard = "3.6.1"

[target.'cfg(target_os = "windows")'.dependencies]
arboard = "3.6.1"

[profile.release]
lto = "fat"     # Enable link-time optimization
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
